objects/EZProtectConfig__c.object
<CustomObject>
    <fields>
        <fullName>Block_Downloads_Until_Scanned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Downloads Until Scanned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationUser__c</fullName>
        <label>Integration User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replace_with_Text_File_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replace with Text File Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_File_Deletions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Trigger File Deletions</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>EZProtect Config</label>
</CustomObject>